Bug 1716044 - Handle Y-flipped transform matrices, r=gfx-reviewers,lsalzman

This caused e.g. WebGL content to get hidden as it always fell out
of bounds. As a side effect clean up the whole custom transform math.

Differential Revision: https://phabricator.services.mozilla.com/D118288