gfx/layers/SurfacePoolWayland.h
@@ -63,6 +63,7 @@ class NativeSurfaceWayland {
   void ClearSubsurface();
   bool HasSubsurface() { return !!mWlSubsurface; }
 
+  virtual void SetBufferTransformFlipped(bool aFlipped);
   void SetPosition(int aX, int aY);
   void SetViewportSourceRect(const Rect aSourceRect);
   void SetViewportDestinationSize(int aWidth, int aHeight);
@@ -85,6 +86,7 @@ class NativeSurfaceWayland {
   Mutex mMutex;
   RefPtr<nsWaylandDisplay> mWaylandDisplay;
   wp_viewport* mViewport = nullptr;
+  bool mBufferTransformFlipped = false;
   IntPoint mPosition = IntPoint(0, 0);
   Rect mViewportSourceRect = Rect(-1, -1, -1, -1);
   IntSize mViewportDestinationSize = IntSize(-1, -1);
@@ -98,6 +100,8 @@ class NativeSurfaceWaylandEGL final : public NativeSurfaceWayland {
   void Commit(const IntRegion& aInvalidRegion) override;
   void NotifySurfaceReady() override;
   void DestroyGLResources() override;
+
+  void SetBufferTransformFlipped(bool aFlipped) override;
 
  private:
   friend RefPtr<NativeSurfaceWayland> NativeSurfaceWayland::Create(
